...
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/identificationTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/ui_2m"
            android:background="@color/ui_components_primary_color"/>

    </LinearLayout>

    <com.mercadolibre.android.cardform.presentation.ui.custom.InputFormEditText
        android:id="@+id/identificationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"/>

</LinearLayout>
