...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/InputFormTheme"
        app:hintTextAppearance="@style/InputFormHintTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:lines="1"
            android:imeOptions="flagNoEnterAction"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/infoInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/cf_hint_input_text"
        android:importantForAccessibility="no"
        android:textSize="@dimen/ui_fontsize_xsmall"
        android:lines="1"
...
