...
            android:text="@string/cf_back"
            android:textAllCaps="false"
            android:textColor="@color/ui_components_primary_color"
            android:textSize="@dimen/ui_fontsize_xsmall" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="@dimen/ui_button_height"
            android:layout_weight="1"
            android:background="@color/cf_button_navigation_background"
            android:text="@string/cf_next"
            android:textAllCaps="false"
...
