<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:context=".presentation.ui.formentry.SecurityFragment">

    <com.mercadolibre.android.cardform.presentation.ui.custom.InputFormEditText
        android:id="@+id/expirationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"/>

    <com.mercadolibre.android.cardform.presentation.ui.custom.InputFormEditText
        android:id="@+id/cvvCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"/>

</LinearLayout>